[package]
name = "prometheus-login-counter-exporter"
version = "0.0.3"
edition = "2021"


[dependencies]
actix-web = "4"
tracing = "0"
tracing-subscriber = { version = "0", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
ipnetwork = "0"
yare = "3"
regex = "1"
